objects/Roleplay_Campaign__c.object
<CustomObject>
    <description>Dreamforce 2017 by Mike Senn</description>
    <fields>
        <fullName>Avatar__c</fullName>
        <label>Avatar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boss__c</fullName>
        <description>Big boss name</description>
        <label>Boss</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notables__c</fullName>
        <label>Notables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpenPositions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Has open positions for roleplayers</description>
        <label>Any Open Positions?</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>